--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "Eden Grace",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "pg": "^8.7.1"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
